--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <p>This page is under construction. Please come back soon!</p>
+    <p>This page is under construction.</p>
 </body>
 
 </html>
