--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 
 <head>
-    <title>Under Construction</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>janemilym</title>
 </head>
 
 <body>
-    <p>This page is under construction.</p>
+    <div class="middle">
+        <h1>coming soon...</h1>
+    </div>
 </body>
 
 </html>
